# wyoming-mlx-whisper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  release-drafter.yml  release.yml  update-readme.yml
scripts/: install_service.sh
tests/: test_handler.py  test_main.py  test_server.py
wyoming_mlx_whisper/: __main__.py  handler.py  server.py
