[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wyoming-mlx-whisper"
version = "1.1.0"
description = "Wyoming Server for MLX whisper"
readme = "README.md"
license = "MIT"
authors = [{ name = "Vincent Lin" }]
keywords = ["rhasspy", "wyoming", "mlx", "whisper", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "wyoming",
    "httpx",
    "librosa",
    "mlx-whisper",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[project.scripts]
wyoming-mlx-whisper = "wyoming_mlx_whisper.__main__:run"

[project.urls]
Homepage = "https://github.com/vincent861223/wyoming-mlx-whisper"
Repository = "https://github.com/vincent861223/wyoming-mlx-whisper.git"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["wyoming_mlx_whisper"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
